--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="about">
             <h2>About Me</h2>
             <article>
-                <p>Hello! I am a student specializing in web development. I enjoy learning about HTML, CSS, and JavaScript to build interactive and creative websites.</p>
+                <p>Hello! I am, Mae! a Multimedia Arts student specializing in web development. I enjoy learning about HTML, CSS, and JavaScript to build interactive and creative websites.</p>
                 <img src="profile.jpg" alt="My Profile Picture" width="200">
             </article>
         </section>
