--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2>About Me</h2>
             <article>
                 <p>Hello! I am, Mae! a Multimedia Arts student specializing in web development. I enjoy learning about HTML, CSS, and JavaScript to build interactive and creative websites.</p>
-                <img src="images/formalpic.jpg" alt="My Profile Picture" width="200">
+                <img src="images\formalpic.jpg" alt="My Profile Picture" width="300px" height="200px">
             </article>
         </section>
 
