--- a/index.html
+++ b/index.html
@@ -1,83 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Student Portfolio</title>
+  <style>
+    /* General */
+    body {
+      margin: 0;
+      font-family: "Poppins", Arial, sans-serif;
+      background-color: #fffafc; /* very light pink */
+      color: #444;
+      line-height: 1.6;
+    }
+
+    h1, h2 {
+      font-weight: 600;
+    }
+
+    a {
+      color: #ff6b9a; /* pink accent */
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    /* Header */
+    header {
+      background-color: #ffe6ef; /* pastel pink */
+      color: #333;
+      text-align: center;
+      padding: 25px 15px;
+      border-bottom: 2px solid #ffd1e8;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 15px 0 0 0;
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+    }
+
+    nav a {
+      font-weight: 500;
+      color: #444;
+      padding: 5px 10px;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+
+    nav a:hover {
+      background-color: #ffd6ea;
+    }
+
+    /* Main content */
+    main {
+      max-width: 850px;
+      margin: 30px auto;
+      padding: 0 20px;
+    }
+
+    section {
+      margin-bottom: 40px;
+      padding: 20px;
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    }
+
+    h2 {
+      color: #ff6b9a;
+      margin-top: 0;
+    }
+
+    img {
+      margin-top: 15px;
+      border-radius: 50%;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+    }
+
+    ul {
+      list-style: circle;
+      padding-left: 20px;
+    }
+
+    /* Table */
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 15px;
+    }
+
+    th, td {
+      border: 1px solid #ffd6ea;
+      padding: 12px;
+      text-align: left;
+    }
+
+    th {
+      background-color: #ffe6ef;
+      color: #333;
+    }
+
+    /* Footer */
+    footer {
+      background-color: #ffe6ef;
+      text-align: center;
+      padding: 15px;
+      border-top: 2px solid #ffd1e8;
+      font-size: 0.9rem;
+      color: #555;
+    }
+  </style>
 </head>
 <body>
 
-    <!-- Header Section -->
-    <header>
-        <h1>My Student Portfolio</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <!-- Header -->
+  <header>
+    <h1>My Student Portfolio</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Main Content -->
-    <main>
+  <!-- Main -->
+  <main>
 
-        <!-- About Me Section -->
-        <section id="about">
-            <h2>About Me</h2>
-            <article>
-                <p>Hello! I am, Mae! a Multimedia Arts student specializing in web development. I enjoy learning about HTML, CSS, and JavaScript to build interactive and creative websites.</p>
-                <img src="formalpic.png" width="200px" height="200px"
-            </article>
-        </section>
+    <!-- About Me -->
+    <section id="about">
+      <h2>About Me</h2>
+      <p>Hello! I’m Mae 🌸, a Multimedia Arts student specializing in web development.  
+      I love building clean, creative, and minimalist websites using HTML, CSS, and JavaScript.</p>
+      <img src="../images/profile.jpg" alt="My Profile Picture" width="180">
+    </section>
 
-        <!-- Projects Section -->
-        <section id="projects">
-            <h2>Projects</h2>
-            <article>
-                <p>Here are some of the projects I have worked on:</p>
-                <ul>
-                    <li>Personal Website</li>
-                    <li>Online Portfolio</li>
-                    <li>Mini E-commerce Page</li>
-                </ul>
-            </article>
-        </section>
+    <!-- Projects -->
+    <section id="projects">
+      <h2>Projects</h2>
+      <p>Here are some of my works:</p>
+      <ul>
+        <li>Personal Website</li>
+        <li>Online Portfolio</li>
+        <li>Mini E-commerce Page</li>
+      </ul>
+    </section>
 
-        <!-- Contact Section -->
-        <section id="contact">
-            <h2>Contact</h2>
-            <article>
-                <p>If you would like to reach out, here are my details:</p>
+    <!-- Contact -->
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>You can reach me through:</p>
+      <table>
+        <tr>
+          <th>Type</th>
+          <th>Details</th>
+        </tr>
+        <tr>
+          <td>Email</td>
+          <td><a href="mailto:student@example.com">student@example.com</a></td>
+        </tr>
+        <tr>
+          <td>Phone</td>
+          <td>+63 912 345 6789</td>
+        </tr>
+        <tr>
+          <td>Portfolio</td>
+          <td><a href="https://example.com" target="_blank">Visit My Website</a></td>
+        </tr>
+      </table>
+    </section>
 
-                <!-- Table for Contact Information -->
-                <table border="1" cellpadding="5">
-                    <tr>
-                        <th>Type</th>
-                        <th>Details</th>
-                    </tr>
-                    <tr>
-                        <td>Email</td>
-                        <td><a href="mailto:student@example.com">student@example.com</a></td>
-                    </tr>
-                    <tr>
-                        <td>Phone</td>
-                        <td>+63 912 345 6789</td>
-                    </tr>
-                    <tr>
-                        <td>Portfolio</td>
-                        <td><a href="https://example.com" target="_blank">Visit My Website</a></td>
-                    </tr>
-                </table>
-            </article>
-        </section>
+  </main>
 
-    </main>
-
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2025 My Student Portfolio | All Rights Reserved</p>
-    </footer>
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 My Student Portfolio | Made with ❤️ and pastel vibes</p>
+  </footer>
 
 </body>
 </html>
