--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </tr>
         <tr>
           <td>Email</td>
-          <td><a href="mailto:adlenemaebiton09@gmail.com">student@example.com</a></td>
+          <td><a href="mailto:adlenemaebiton09@gmail.com">adlenemaebiton09@gmail.com</a></td>
         </tr>
         <tr>
           <td>Phone</td>
