--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <main>
     <section id="about">
       <h2>About Me</h2>
-      <p>Hello! I’m Mae. i wanna kms.</p>
-      <img src="../images/profile.jpg" alt="no pic yet wait" width="200">
+      <p>Hello! My name is Adlene Mae SG Biton. And i am here to show or tell some stuff about me!</p>
+      <img src="../images/profile.png" alt="no pic yet wait" width="200">
     </section>
 
     <section id="projects">
