--- a/index.html
+++ b/index.html
@@ -7,56 +7,88 @@
 <body>
 
   <!-- Header -->
-  <header style="background-image: url('https://i.pinimg.com/originals/02/5b/cf/025bcf9a30cdc91ff066c451fe972f1e.jpg'); background-size: cover; padding: 100px; text-align: center; color: rgb(194, 221, 132);
+  <header style="text-align: center; color: rgb(235, 175, 230);
   -webkit-text-stroke: 1px black;">
 
-    <h1>My Student Portfolio</h1>
+    <h1>Welcome to Maelene's Webpage!</h1>
     <nav>
       <a href="#about">About Me</a> |
-      <a href="#projects">Projects</a> |
-      <a href="#contact">Contact</a>
+      <a href="#whatido">What I Do</a> |
+      <a href="#contacts">Contacts</a> |
+      <a href="#commissions">Commissions</a>
     </nav>
   </header>
 
   <!-- Main Content -->
   <main>
     <section id="about">
-      <h2>About Me</h2>
-      <p>Hello! My name is Adlene Mae SG Biton. And i am here to show or tell some stuff about me!</p>
-      <img src="../images/profile.png" alt="no pic yet wait" width="200">
+      <h2>About Me! :3</h2>
+      <p>Hello! My name is Adlene Mae SG Biton, or you can call me Mae or Maelene. And i am here to show or tell some stuff about me!</p>
     </section>
 
-    <section id="projects">
-      <h2>Projects</h2>
+    <section id="whatido">
+      <h2>What i do! :D</h2>
       <ul>
-        <li>Personal Website</li>
-        <li>Portfolio Page</li>
-        <li>Mini E-commerce Page</li>
+        <li>Digital Illustrations</li>
+        <li>Traditional Arts</li>
+        <li>Digital Commissions</li>
       </ul>
     </section>
 
-    <section id="contact">
-      <h2>Contact</h2>
+    <section id="Commissions">
+      <h2>Commissions! :D</h2>
+      <p>But first "What is an Art Commission?" According to Google, An art commission is a request made by a client for an artist to create a specific piece of artwork tailored to the client's needs.</p>
+      <h2>Prices!</h2>
+      <p>Here are the prices for my commissions! (In case you want to buy one)</p>
+      <table border="1">
+      <tr>
+          <td>Half Body</td>
+          <td>20USD/500PHP</td>
+        </tr>
+       <tr>
+        <td>Bust Up</td>
+        <td>12USD/300PHP</td>
+       </tr>
+       <tr>
+        <td>Couple Sketches</td>
+        <td>2USD/150PHP</td>
+       </tr>
+        </table>
+
+        <h2>I Can Draw:</h2>
+      <ul>
+        <li>Original Characters</li>
+        <li>Real People</li>
+        <li>Couples</li>
+      </ul>
+
+      <h2>I Can't Draw:</h2>
+      <ul>
+        <li>Anything that has animal parts...</li>
+      </ul>
+      </section>
+
+    <section id="contacts">
+      <h2>Contacts</h2>
       <p>You can contact me here:</p>
       <table border="1">
         <tr>
-          <th>Type</th>
+          <th>Socials</th>
           <th>Details</th>
         </tr>
         <tr>
-          <td>Email</td>
+          <td>Personal Email</td>
           <td><a href="mailto:adlenemaebiton09@gmail.com">adlenemaebiton09@gmail.com</a></td>
         </tr>
         <tr>
-          <td>Phone</td>
-          <td>+63 912 345 6789</td>
+          <td>IG Art Account</td>
+          <td><a href="https://www.instagram.com/mae.lene__?igsh=eWY5eGQxYXRrNmxu">mae.lene__</a></td>
         </tr>
       </table>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer style="text-align: center; margin-top: 20px; padding: 10px; background-color: lightpink;">
     <p>&copy; 2025 My Portfolio</p>
   </footer>
 
